added testcase for ptCounts in playground
git-svn-id: file:///srv/local/data/cleanRepo/trunk@12731 a0517364-e873-4167-b1c8-416daa5a6b91